# blobfig

./: Cargo.toml  README.md
src/: areamy_ext.rs  error.rs  lib.rs  ndarray_ext.rs
src/parser/: array.rs  entry.rs  file.rs  mod.rs  primitives.rs  string.rs  take.rs  value.rs
src/types/: array.rs  dtype.rs  file.rs  header.rs  mod.rs  value.rs
src/writer/: array.rs  file.rs  mod.rs  value.rs
tests/: base.rs  ndarray_ext.rs
